add search and upload cloud image
