# routes/productrouter.js
@@ -9,7 +9,8 @@ const {
     sellergetoneproduct,
     sellerupdatepatch,
     sellerupdateput,
-    sellerdeleteproduct
+    sellerdeleteproduct,
+    getAllProductsforsearche
 } = require("../controller/productcontroller");
 
 const upload = require("../config/multer");
@@ -21,6 +22,7 @@ const router = Router();
 router.use(checkauth); 
 
 router.get("/", checkrole("admin"), getAllProducts);
+router.get("/search" , checkrole("admin"), getAllProductsforsearche);
 router.get("/:name", checkrole("admin"), getOneProduct);
 
 router.post("/", upload.array("images", 5), checkrole("admin", "seller"), createProduct);
@@ -31,6 +33,7 @@ router.delete("/:id", checkrole("admin"), deleteproduct);
 
 
 router.get("/seller", checkrole("seller"), sellergetallproduct);
+router.get("/seller/search", checkrole("seller"), getAllProductsforsearche);
 router.get("/seller/:id", checkrole("seller"), sellergetoneproduct);
 router.patch("/seller/:id", upload.array("images", 5), checkrole("seller"), sellerupdatepatch);
 router.put("/seller/:id", upload.array("images", 5), checkrole("seller"), sellerupdateput);
